--- a/package.json
+++ b/package.json
@@ -12,11 +12,16 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.2.5",
+    "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
     "framer-motion": "^11.0.3",
     "jwt-decode": "^4.0.0",
     "next": "14.1.0",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
